--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@ fieldset { border:1px solid #666; }
 	font-size:.85em;
 	font-weight:normal;
 }
+.link {
+	cursor:pointer;
+	cursor:hand;
+}
 
 #notify { background-color:#f5f5f5; }
 .notifybg { background-color:#f5f5f5; }
