--- a/trunk/css/layout.css
+++ b/trunk/css/layout.css
@@ -32,6 +32,8 @@ table.activity td {
 
 .catbox { width:60px;padding:0 2px; }
 
+#login { margin-bottom:20px; }
+
 /* LEFT COLUMN */
 #container {
 	margin:15px 30px;
