--- a/trunk/css/style.css
+++ b/trunk/css/style.css
@@ -21,6 +21,8 @@ h5.sub {
 fieldset { border:1px solid #666; }
 
 .b { font-weight:bold; }
+.i { font-style:italic; }
+.r { color:#f00; }
 .g { color:#666; }
 .itemedit {	font-size:.65em; font-weight:normal; }
 .markcomplete {
