--- a/css/images.css
+++ b/css/images.css
@@ -89,7 +89,7 @@
 	padding-left:20px;
 }
 
-.close {
+.close,.success {
 	background: url(../images/close.gif) no-repeat 0 50%;
 	padding-left:20px;
 }
