--- a/css/header.css
+++ b/css/header.css
@@ -1,12 +1,11 @@
 #header {
 	background-repeat: repeat-x;
-	padding:6px 0 0 0;
+	padding:6px 30px 13px 30px;
 }
 
 #header #loggedin {
 	float:right; 
 	font-size:.85em; 
-	margin-right:30px; 
 	margin-top:5px; 
 	color:#fff;
 }
@@ -23,16 +22,14 @@
 #header #projectmenu ul li a { text-decoration:none; color:#00f; } 
 
 #header h1 {
-	font-size:2.5em;
+	font-size:2.6em;
 	font-weight:bold;
 	color:#f5f5f5;
-	margin-left:30px;
-	margin-top:3px;
+	margin:3px 0 6px 0;
 }
 
 #header #linksback {
 	font-size:.85em;
-	margin-left:30px;
 	color:#f5f5f5;
 }
 
@@ -46,37 +43,52 @@
 	text-decoration:none;
 }
 
-#header #tabs {
-	margin: 5px 0 0 30px;
-	height: 26px;
+#header #tabs { 
+	bottom:0;
+	position:relative;
 }
 
-#header #tabs li {
-	display: inline;
+#header #tabs #maintabs { float:left; }
+#header #tabs #admintabs { float:right; }
+
+#header #tabs ul li {
 	list-style: none;
+	float:left;
+
 }
 
-#header div#tabs a {
-  text-decoration: none;
-}
-
-#header #tabs ul#maintabs a {
-	float: left; 
+#header #tabs ul li a {
+	text-decoration: none;
+	font-size:1.2em;
 	font-weight: bold;
-	padding: 4px 8px 4px 8px;
+	padding:.2em .5em;
+	display:block;
+	margin-left:.2em;
+	line-height:1.2em;
+	margin-top:3px;
 }
 
-#header #tabs ul#maintabs a.current {
+
+#header #tabs ul li a.current {
+	font-size:1.4em;
+	padding:.1em .5em;
 	background: #e5e5e5 url(../images/tab-bg.png) top repeat-x;
-	border-bottom: 1px solid #e5e5e5;
-	padding: 3px 8px 4px 8px;
-	font-size:1.1em;
 	color: #393;
+	border-bottom:none;
+	line-height:1.4em;
+	margin-top:0;
 }
 
-#header #tabs a:hover {
+#header #tabs ul li a:hover {
     color: #000;
     background-color: #ffc;
+	border-bottom: 1px solid #ffc;
+}
+
+#header #tabs ul li a.current:hover {
+	color: #393;
+	background-color: #e5e5e5;
+	border-bottom:none;
 }
 
 .menuhover { background-color:#fc0; cursor:pointer; }
