--- a/css/header/grey.css
+++ b/css/header/grey.css
@@ -1,10 +1,9 @@
 #header {
-	background-image: url("../../images/header/header-grey.png");
+	background: #434343 url("../../images/header/header-grey.png");
 }
 
-#header #tabs a {
+#header #tabs ul li a {
     background-color: #bbb;
     color: #000;
-    border: 1px solid #444;
     border-bottom: 1px solid #ccc;
 }
