--- a/css/images.css
+++ b/css/images.css
@@ -139,6 +139,10 @@
 	padding-left:20px;
 }
 
+.submenu {
+	background: url(../images/arrow_down.gif) no-repeat 30px 50%;
+}
+
 .warn {
 	background: url(../images/warn.gif) no-repeat 0 50%;
 	padding-left:20px;
