--- a/css/tables.css
+++ b/css/tables.css
@@ -2,7 +2,9 @@
 table.svn { width:100%; }
 table.svn > caption { width:100%; padding:5px; }
 table.svn > thead th, table.svn > tbody td { padding:4px; }
-
+table.activity, table.admin { width:100%; }
+table.activity tbody td { padding:4px; text-align:left; }
+table.admin tr th, table.admin tr td { padding:4px 0; }
 table#milestone_cal tr th, table#milestone_cal tr td { padding:3px; vertical-align:top; }
 table#milestone_cal tr td ul.cal_ms li { padding-top:4px; }
 
@@ -16,18 +18,13 @@ table.svn thead tr th, table.svn tbody tr td { font-size:.9em; border:1px solid 
 table.svn tbody tr.even { background-color:#FFF; }
 table.svn tbody tr.odd { background: #f9f9f9;	border-top:1px solid #FFF; }
 table.svn a { text-decoration:none; }
-
-table.activity { width:100%; }
 table.activity caption { font-size:1.2em; font-weight:bold; background-color:#eee; padding:4px; }
-table.activity tbody td { padding:4px; text-align:left; }
 table.activity thead th { 
-	padding-right:4px;
-	padding-top:4px;
-	padding-bottom:4px;
-	text-align:left;
-	font-weight:bold;
-	background-color:#f5f5f5; 
+	padding-right:4px; padding-top:4px;	padding-bottom:4px;
+	text-align:left; font-weight:bold; background-color:#f5f5f5; 
 }
+table.admin tr { border-bottom:1px solid #ccc; }
+table.admin tr th { font-weight:bold; }
 
 table.bug tr td.label { font-weight:bold; text-align:right; width:100px; padding-right:10px; }
 table.bug tr td { padding:3px; }
