--- a/trunk/css/layout.css
+++ b/trunk/css/layout.css
@@ -18,6 +18,9 @@ ul.nobullet li { margin-bottom:5px; }
 .tac { text-align:center; }
 .tal { text-align:left; }
 
+.error, .success { padding:10px; margin-bottom:10px; }
+.error ul, .success ul { margin:10px 30px;}
+
 div.pagediv {
 	padding:3px 5px;
 	margin-bottom:5px;
