--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ a.subactive { font-size:125%; font-weight:bold; text-decoration:none; }
 #container .left .main .content .wrapper .milestones .milestone .completed { color:#660; }
 #container .left .main .content .wrapper > .completed { border-left:1px solid #660; }
 
-#container .left .main .content .wrapper #commentbar {
+#container .left .main .content .wrapper .commentbar {
 	background-color:#555; font-size:1em; font-weight:bold; color:#fff;
 }
 
@@ -187,6 +187,9 @@ a.subactive { font-size:125%; font-weight:bold; text-decoration:none; }
   	font-size: 8px;
 }
 
+#container .left .main .content ul.filelist li a {
+	text-decoration:none;
+}
 
 #container .left .main .content .listWrapper .todolist {
 	border-left:5px solid #666;
