--- a/includes/dp.SyntaxHighlighter/Styles/SyntaxHighlighter.css
+++ b/includes/dp.SyntaxHighlighter/Styles/SyntaxHighlighter.css
@@ -1,12 +1,31 @@
-.dp-highlighter
+﻿.dp-highlighter
 {
-	font-family: "Consolas", "Courier New", Courier, mono;
+	font-family: "Consolas", "Courier New", Courier, mono, serif;
 	font-size: 12px;
 	background-color: #E7E5DC;
 	width: 99%;
 	overflow: auto;
-	margin: 18px 0px 18px 0px;
+	margin: 18px 0 18px 0 !important;
 	padding-top: 1px; /* adds a little border on top when controls are hidden */
+}
+
+/* clear styles */
+.dp-highlighter ol,
+.dp-highlighter ol li,
+.dp-highlighter ol li span 
+{
+	margin: 0;
+	padding: 0;
+	border: none;
+}
+
+.dp-highlighter a,
+.dp-highlighter a:hover
+{
+	background: none;
+	border: none;
+	padding: 0;
+	margin: 0;
 }
 
 .dp-highlighter .bar
@@ -14,34 +33,38 @@
 	padding-left: 45px;
 }
 
-.dp-highlighter.collapsed .bar, 
-.dp-highlighter.nogutter .bar 
+.dp-highlighter.collapsed .bar,
+.dp-highlighter.nogutter .bar
 {
 	padding-left: 0px;
 }
 
-.dp-highlighter ol 
+.dp-highlighter ol
 {
 	list-style: decimal; /* for ie */
-	list-style: decimal-leading-zero; /* better look for others */
 	background-color: #fff;
-	margin: 0px 0px 1px 45px; /* 1px bottom margin seems to fix occasional Firefox scrolling */
+	margin: 0px 0px 1px 45px !important; /* 1px bottom margin seems to fix occasional Firefox scrolling */
 	padding: 0px;
 	color: #5C5C5C;
 }
 
-.dp-highlighter.nogutter ol
+.dp-highlighter.nogutter ol,
+.dp-highlighter.nogutter ol li
 {
-	list-style-type: none !important; 
-	margin-left: 0px; 
+	list-style: none !important;
+	margin-left: 0px !important;
 }
 
 .dp-highlighter ol li,
 .dp-highlighter .columns div
 {
+	list-style: decimal-leading-zero; /* better look for others, override cascade from OL */
+	list-style-position: outside !important;
 	border-left: 3px solid #6CE26C;
-	background-color: #f8f8f8;
-	padding-left: 10px;
+	background-color: #F8F8F8;
+	color: #5C5C5C;
+	padding: 0 3px 0 10px !important;
+	margin: 0 !important;
 	line-height: 14px;
 }
 
@@ -51,66 +74,68 @@
 	border: 0;
 }
 
-.dp-highlighter .columns 
+.dp-highlighter .columns
 {
+	background-color: #F8F8F8;
 	color: gray;
 	overflow: hidden;
 	width: 100%;
 }
 
-.dp-highlighter .columns div 
+.dp-highlighter .columns div
 {
 	padding-bottom: 5px;
 }
 
-.dp-highlighter ol li.alt 
+.dp-highlighter ol li.alt
 {
-	background-color: #fff; 
+	background-color: #FFF;
+	color: inherit;
 }
 
-.dp-highlighter ol li span 
+.dp-highlighter ol li span
 {
-	color: Black;
+	color: black;
+	background-color: inherit;
 }
 
 /* Adjust some properties when collapsed */
 
-.dp-highlighter.collapsed ol 
+.dp-highlighter.collapsed ol
 {
 	margin: 0px;
 }
 
-.dp-highlighter.collapsed ol li 
-{ 
+.dp-highlighter.collapsed ol li
+{
 	display: none;
 }
 
 /* Additional modifications when in print-view */
 
-.dp-highlighter.printing 
+.dp-highlighter.printing
 {
 	border: none;
 }
 
-.dp-highlighter.printing .tools 
+.dp-highlighter.printing .tools
 {
 	display: none !important;
 }
 
-.dp-highlighter.printing li 
+.dp-highlighter.printing li
 {
 	display: list-item !important;
 }
 
 /* Styles for the tools */
 
-.dp-highlighter .tools 
+.dp-highlighter .tools
 {
 	padding: 3px 8px 3px 10px;
 	font: 9px Verdana, Geneva, Arial, Helvetica, sans-serif;
 	color: silver;
 	background-color: #f8f8f8;
-	text-align1: right;
 	padding-bottom: 10px;
 	border-left: 3px solid #6CE26C;
 }
@@ -129,6 +154,7 @@
 {
 	font-size: 9px;
 	color: #a0a0a0;
+	background-color: inherit;
 	text-decoration: none;
 	margin-right: 10px;
 }
@@ -136,23 +162,24 @@
 .dp-highlighter .tools a:hover
 {
 	color: red;
+	background-color: inherit;
 	text-decoration: underline;
 }
 
 /* About dialog styles */
 
-.dp-about { background-color: #fff; margin: 0px; padding: 0px; }
+.dp-about { background-color: #fff; color: #333; margin: 0px; padding: 0px; }
 .dp-about table { width: 100%; height: 100%; font-size: 11px; font-family: Tahoma, Verdana, Arial, sans-serif !important; }
 .dp-about td { padding: 10px; vertical-align: top; }
 .dp-about .copy { border-bottom: 1px solid #ACA899; height: 95%; }
-.dp-about .title { color: red; font-weight: bold; }
+.dp-about .title { color: red; background-color: inherit; font-weight: bold; }
 .dp-about .para { margin: 0 0 4px 0; }
-.dp-about .footer { background-color: #ECEADB; border-top: 1px solid #fff; text-align: right; }
-.dp-about .close { font-size: 11px; font-family: Tahoma, Verdana, Arial, sans-serif !important; background-color: #ECEADB; width: 60px; height: 22px; }
+.dp-about .footer { background-color: #ECEADB; color: #333; border-top: 1px solid #fff; text-align: right; }
+.dp-about .close { font-size: 11px; font-family: Tahoma, Verdana, Arial, sans-serif !important; background-color: #ECEADB; color: #333; width: 60px; height: 22px; }
 
 /* Language specific styles */
 
-.dp-highlighter .comment, .dp-highlighter .comments { color: #008200; }
-.dp-highlighter .string { color: blue; }
-.dp-highlighter .keyword { color: #069; font-weight: bold; }
-.dp-highlighter .preprocessor { color: gray; }
+.dp-highlighter .comment, .dp-highlighter .comments { color: #008200; background-color: inherit; }
+.dp-highlighter .string { color: blue; background-color: inherit; }
+.dp-highlighter .keyword { color: #069; font-weight: bold; background-color: inherit; }
+.dp-highlighter .preprocessor { color: gray; background-color: inherit; }
