--- a/css/layout.css
+++ b/css/layout.css
@@ -15,6 +15,7 @@ ul.nobullet li { margin-bottom:5px; }
 .mb15 { margin-bottom:15px; }
 .mb20 { margin-bottom:20px; }
 .mt20 { margin-top:20px; }
+.pl5 { padding-left:5px; }
 .tac { text-align:center; }
 .tal { text-align:left; }
 
