--- a/css/layout.css
+++ b/css/layout.css
@@ -238,3 +238,5 @@ table.activity td {
 	padding-left:20px;
 }
 
+/* make room for files icons */
+.fileLrg > h3, .fileLrg > p { padding-left:53px; }
