--- a/css/forms.css
+++ b/css/forms.css
@@ -151,3 +151,5 @@ form.forgot input.sub {
 	margin-left:5px;
 }
 #container .left .main .content .wrapper form.forgot p { margin:5px 0 15px 0; }
+
+#res_desc { height:70px; width:480px;}
