--- a/css/layout.css
+++ b/css/layout.css
@@ -176,6 +176,10 @@ table.activity td {
 	margin:15px 0 10px 0; padding:5px;
 }
 
+#container .left .main .content .wrapper .attachbar {
+	margin:10px 0 0 0; padding:5px;
+}
+
 #container .left .main .content .wrapper .commentbody {
 	margin-bottom:10px;
 	padding:10px 6px 6px 58px;
